--- a/index.html
+++ b/index.html
@@ -17,22 +17,18 @@
       <div class="inc-exp-container">
         <div>
           <h4>Receitas</h4>
-          <p id="money-plus" class="money plus">+ R$0.00</p>
+          <p id="money-plus" class="money plus">+R$0.00</p>
         </div>
 
         <div>
           <h4>Despesas</h4>
-          <p id="money-minus" class="money minus">- R$0.00</p>
+          <p id="money-minus" class="money minus">-R$0.00</p>
         </div>
       </div>
 
       <h3>Transações</h3>
       
-      <ul id="transactions" class="transactions">
-        <!-- <li class="minus">
-          Salário <span>-$400</span><button class="delete-btn">x</button>
-        </li> -->
-      </ul>
+      <ul id="transactions" class="transactions"></ul>
 
       <h3>Adicionar transação</h3>
       
